--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
     <head>
+        <meta name="google-site-verification" content="8u_LkVXj6nMv3Q786Nx2puTA7dLNll-N4XtRgu_7UL0" />
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>TTDC</title>
