--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                             <div class="col-sm-6">
                                 <div class="head_title">
                                     <h3><b>PROGRAMA DE MARKETING DIGITAL</b></h3>
-                                    <!--<div class="separator"></div>-->
+                                    <div class="separator"></div>
                                 </div>
                                 <div class="single_choose">
                                     <div class="single_choose_acording">
