--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
                                         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
                                             <ul class="nav navbar-nav navbar-right">
-                                                <li><a href="#home">INICIO</a></li>
-                                                <li><a href="#service">SERVICIOS</a></li>
+                                                <li><a href="#home"style="color:rgb(1, 2, 1);"/><b>INICIO</b></a></li>
+                                                <li><a href="#service"style="color:rgb(1, 2, 1);"/"><b>SERVICIOS</b></a></li>
                                                 <!--<li><a href="#team">TEAMS</a></li>-->
                                                 <!--<li><a href="#portfolio">WORKS</a></li>-->
-                                                <li><a href="#testimonial">TESTIMONIOS</a></li>
-                                                <li><a href="#contact">CONTACTOS</a></li>
+                                                <li><a href="#testimonial"style="color:rgb(1, 2, 1);"/><b>TESTIMONIOS</b></a></li>
+                                                <li><a href="#contact"style="color:rgb(1, 2, 1);"/><b>CONTACTOS</b></a></li>
 
 
                                                 <!--<li>
