--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                                                 <li><a href="#service"style="color:rgb(1, 2, 1);"/">SERVICIOS</a></li>
                                                 <li><a href="#about"style="color:rgb(1, 2, 1);"/">ACERCA DE</a></li>
                                                 <!--<li><a href="#portfolio">WORKS</a></li>-->
-                                                <li><a href="#testimonial"style="color:rgb(1, 2, 1);"/><b>TESTIMONIOS</a></li>
+                                                <li><a href="#testimonial"style="color:rgb(1, 2, 1);"/>TESTIMONIOS</a></li>
                                                 <li><a href="#contact"style="color:rgb(1, 2, 1);"/>CONTACTOS</a></li>
 
 
