--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                                             <ul class="nav navbar-nav navbar-right">
                                                 <li><a href="#home"style="color:rgb(1, 2, 1);"/>INICIO</a></li>
                                                 <li><a href="#service"style="color:rgb(1, 2, 1);"/">SERVICIOS</a></li>
-                                                <li><a href="#service"style="color:rgb(1, 2, 1);"/">ACERCA DE</a></li>
+                                                <li><a href="#about"style="color:rgb(1, 2, 1);"/">ACERCA DE</a></li>
                                                 <!--<li><a href="#portfolio">WORKS</a></li>-->
                                                 <li><a href="#testimonial"style="color:rgb(1, 2, 1);"/>TESTIMONIOS</a></li>
                                                 <li><a href="#contact"style="color:rgb(1, 2, 1);"/>CONTACTOS</a></li>
