--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                                                 </div>
                                                 <div id="collapsefive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingfive" aria-expanded="false">
                                                     <div class="panel-body">
-                                                    <h5><b> US$ 50,ºº</b><br></h5>
+                                                    <h3><b> US$ 50,ºº</b><br></h3>
                                                     </div>
                                                 </div>
                                             </div>
@@ -417,7 +417,7 @@
                                         <img src="assets/images/MKTG DIGITAL_3.jpg" alt="">
                                     </div>
                                     <div class="home_btn">
-                                        <a href="https://share.hsforms.com/1hEf3QRaUQIiZQqjw62KPuwcoyj6" class="btn btn-primary">DESCARGA DE FOLLETO</a>
+                                        <a href="https://drive.google.com/drive/u/2/folders/1QoPtx7gqDppqNYp5mPkyFX_XB9jBCoEf" class="btn btn-primary">DESCARGA DE FOLLETO</a>
                                     </div>
                                     <div class="home_btn">
                                         <a href="https://share.hsforms.com/1At83x4KlT7iTFJdLFsRCNAcoyj6" class="btn btn-primary">INSCRIPCIÓN</a>
