--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
 
             <section id="home" class="home">
-                <div class="overlay">
+                <!-- <div class="overlay">-->
                     <div class="container">
                         <div class="row">
                             <div class="col-sm-12 ">
@@ -159,7 +159,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                <!--</div>-->
             </section>
 
 
