--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
                                             <ul class="nav navbar-nav navbar-right">
                                                 <li><a href="#home"style="color:rgb(255, 145, 0);"/>INICIO</a></li>
-                                                <li><a href="#service"style="color:rgb(255, 145, 0);"/">SERVICIOS</a></li>
+                                                <li><a href="#service"style="color:rgb(255, 145, 0);"/">CURSOS</a></li>
                                                 <li><a href="#about"style="color:rgb(255, 145, 0);"/>ACERCA DE</a></li>
                                                 <!--<li><a href="#portfolio">WORKS</a></li>-->
                                                 <li><a href="#testimonial"style="color:rgb(255, 145, 0);"/>TESTIMONIOS</a></li>
@@ -125,7 +125,7 @@
                                 <div class="main_home_slider text-center">
                                     <div class="single_home_slider">
                                         <div class="main_home wow fadeInUp" data-wow-duration="700ms">
-                                            <h1><span style="color:rgb(1, 2, 1)">TT</span><span style="color:rgb(255, 145, 0)">D</span><span style="color:red">C<span></span></h1>
+                                            <h1><span style="color:rgb(253, 255, 253)">TT</span><span style="color:rgb(255, 145, 0)">D</span><span style="color:red">C<span></span></h1>
                                             <h3><span style="color:rgb(253, 255, 253)">TRANSFORMANDO TUS DATOS EN CONOCIMIENTO</span></h3>
                                             <div class="home_btn">
                                                 <a href="https://share.hsforms.com/1-dgDGX4GSJCr58Rod7Ob5Acoyj6" class="btn btn-primary">Más información</a>
@@ -138,7 +138,7 @@
                                         <div class="main_home wow fadeInUp" data-wow-duration="700ms">
                                             <i class="fa fa-star fa-2x fa.lg" style="color:rgb(255, 145, 0);"/></i>
                                             
-                                            <h3><span style="color:rgb(253, 255, 253)">LLEVANDO TU MARCA A UN NUEVO NIVEL</span></h3>
+                                            <h3><span style="color:rgb(253, 255, 253)">LLEVANDO TUS COMPETENCIAS A UN NUEVO NIVEL.</span></h3>
                                             <div class="home_btn">
                                                 <a href="https://share.hsforms.com/1-dgDGX4GSJCr58Rod7Ob5Acoyj6" class="btn btn-primary">Más información</a>
                                             </div>
@@ -190,10 +190,10 @@
                                                                     <h3>MARKETING DIGITAL - ABRIL/2022</h3>
                                                                     <div class="separator"></div>
                                                                 </div>
-                                                                <p><h6>La forma de hacer marketing ha cambiado y con ello se ha transformado la forma de  
-                                                                    implementar campañas que causen impacto en la era digital. Domina el conocimiento y  
-                                                                    descubre todas las herramientas de Marketing Digital para llevar a cabo todas las estrategias  
-                                                                    de tu organización.</h6>
+                                                                <p><h6>La forma de hacer marketing ha cambiado y con ello se ha transformado la forma de implementar campañas que causen impacto en la era digital. </p></h6>
+                                                                        <p><h6>Domina el conocimiento y descubre todas las herramientas de Marketing Digital para llevar a cabo todas las estrategias de tu organización.
+
+                                                                    </h6>
                                                                  </p>
 
                                                                 <a href="https://share.hsforms.com/1-dgDGX4GSJCr58Rod7Ob5Acoyj6" class="btn btn-primary">Más información</a>
@@ -387,7 +387,7 @@
                                                 </div>
                                                 <div id="collapsefive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingfive" aria-expanded="false">
                                                     <div class="panel-body">
-                                                    <h3><b> US$ 50,ºº</b><br></h3>
+                                                    <h3><b> $ 65 + Iva (descuento por pronto pago).</b><br></h3>
                                                     </div>
                                                 </div>
                                             </div>
@@ -400,6 +400,7 @@
                                                         </a>
                                                     </h4>
                                                 </div>
+                                                    
                                                 <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne" aria-expanded="false" style="height: auto;">
                                                     <div class="panel-body">
                                                     <h5> Una vez terminado el curso, obtendrás un Certificado que resaltará tus nuevas habilidades y conocimiento. Validará tus nuevos conocimientos y podrás dar a conocer en tu perfil profesional.</h5>
