--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                                                 </div>
                                                 <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne" aria-expanded="false" style="height: auto;">
                                                     <div class="panel-body">
-                                                    <h5>La forma de hacer marketing ha cambiado y con ello se ha transformado la forma de implementar campañas que causen impacto en la era digital. Domina el conocimiento y descubre todas las herramientas de Marketing Digital para llevar a cabo todas las estrategias de tu organización.</h5>
+                                                    <h6>La forma de hacer marketing ha cambiado y con ello se ha transformado la forma de implementar campañas que causen impacto en la era digital. Domina el conocimiento y descubre todas las herramientas de Marketing Digital para llevar a cabo todas las estrategias de tu organización.</h6>
                                                     </div>
                                                 </div>
                                             </div>
@@ -326,12 +326,12 @@
                                                 </div>
                                                 <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo" aria-expanded="false">
                                                     <div class="panel-body">
-                                                    <p><h5> 1.- Plan de Marketing Digital </h5></p>
-                                                    <p><h5> 2.- Estrategia de Contenido</h5></p>
-                                                    <p><h5> 3.- SEO</h5></p>
-                                                    <p><h5> 4.- Publicidad en Facebook/Instagram</h5></p>
-                                                    <p><h5> 5.- Email Marketing</h5></p>
-                                                    <p><h5> 6.- Redes de Crecimiento Orgánico (LinkedIn, Youtube, Tiktok)</h5></p>
+                                                    <p><h6> 1.- Plan de Marketing Digital </h6></p>
+                                                    <p><h6> 2.- Estrategia de Contenido</h6></p>
+                                                    <p><h6> 3.- SEO</h6></p>
+                                                    <p><h6> 4.- Publicidad en Facebook/Instagram</h6></p>
+                                                    <p><h6> 5.- Email Marketing</h6></p>
+                                                    <p><h6> 6.- Redes de Crecimiento Orgánico (LinkedIn, Youtube, Tiktok)</h6></p>
 
                                                     </div>
                                                 </div>
@@ -346,13 +346,13 @@
                                                 </div>
                                                 <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree" aria-expanded="false">
                                                     <div class="panel-body">
-                                                    <p><h5>Toda aquella persona que quiera implementar estrategias de Marketing Digital en su empresa. </h5></p>
+                                                    <p><h6>Toda aquella persona que quiera implementar estrategias de Marketing Digital en su empresa. </h6></p>
 
-                                                    <p><h5> •	Ayudantes, coordinadores, Asistentes de Marketing</h5></p>
-                                                    <p><h5> •	Profesional encargado de la imagen corporativa de la empresa </h5></p>
-                                                    <p><h5> •	Estudiantes Universitarios de quieran dominar de forma especializada y práctica las actividades de Marketing digital</h5></p>
-                                                    <p><h5> •	Emprendedores/Empresarios Independientes. </h5></p>
-                                                    <p><h5> •	Todo aquel profesional que quiera dominar estos temas de forma práctica</h5></p>
+                                                    <p><h6> •	Ayudantes, coordinadores, Asistentes de Marketing</h6></p>
+                                                    <p><h6> •	Profesional encargado de la imagen corporativa de la empresa </h6></p>
+                                                    <p><h6> •	Estudiantes Universitarios que quieran dominar de forma especializada y práctica las actividades de Marketing digital</h6></p>
+                                                    <p><h6> •	Emprendedores/Empresarios Independientes. </h6></p>
+                                                    <p><h6> •	Todo aquel profesional que quiera dominar estos temas de forma práctica</h6></p>
 
                                                     </div>
                                                 </div>
@@ -369,11 +369,11 @@
                                                     <div class="panel-body">
                                                         <p><h5>Son 8 horas de estudio divididas en 5 jornadas prácticas, en formato online (tiempo real).</h5></p>
 
-                                                        <p><h5>•	Día 1 - lunes 4 abril - 19h30 a 21h00 </h5></p>
-                                                        <p><h5>•	Día 3 - martes 5 abril - 19h30 a 21h00 </h5></p>
-                                                        <p><h5>•	Día 3 - miércoles 6 abril - 19h30 a 21h00</h5></p>
-                                                        <p><h5>•	Día 4 - jueves 7 abril - 19h30 a 21h00</h5></p>
-                                                        <p><h5>•	Día 5 - viernes 8 abril - 19h30 a 20h30</h5></p>
+                                                        <p><h6>•	Día 1 - lunes 4 abril - 19h30 a 21h00 </h6></p>
+                                                        <p><h6>•	Día 3 - martes 5 abril - 19h30 a 21h00 </h6></p>
+                                                        <p><h6>•	Día 3 - miércoles 6 abril - 19h30 a 21h00</h6></p>
+                                                        <p><h6>•	Día 4 - jueves 7 abril - 19h30 a 21h00</h6></p>
+                                                        <p><h6>•	Día 5 - viernes 8 abril - 19h30 a 20h30</h6></p>
                                                     </div>
                                                 </div>
                                             </div>
@@ -403,7 +403,7 @@
                                                     
                                                 <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne" aria-expanded="false" style="height: auto;">
                                                     <div class="panel-body">
-                                                    <h5> Una vez terminado el curso, obtendrás un Certificado que resaltará tus nuevas habilidades y conocimiento. Validará tus nuevos conocimientos y podrás dar a conocer en tu perfil profesional.</h5>
+                                                    <h6> Una vez terminado el curso, obtendrás un Certificado que resaltará tus nuevas habilidades y conocimiento. Validará tus nuevos conocimientos y podrás dar a conocer en tu perfil profesional.</h6>
                                                     </div>
                                                 </div>
                                             </div>
