--- a/index.html
+++ b/index.html
@@ -174,9 +174,9 @@
                                         <!-- Nav tabs -->
                                         <ul class="service_tabe_menu nav nav-tabs" role="tablist">
                                             <li role="presentation" class="active"><a href="#webdesign" aria-controls="webdesign" role="tab" data-toggle="tab"><i class="fa fa-map-marker"></i> <br />MARKETING DIGITAL</a></li>
-                                            <li role="presentation"><a href="#appdesign" aria-controls="appdesign" role="tab" data-toggle="tab"><i class="fa fa-map-marker"></i> <br />CONTABILIDAD</a></li>
-                                            <li role="presentation"><a href="#graphicdesign" aria-controls="graphicdesign" role="tab" data-toggle="tab"><i class="fa fa-map-marker"></i> <br />FINANZAS</a></li>
-                                            <li role="presentation"><a href="#gamedesign" aria-controls="gamedesign" role="tab" data-toggle="tab"><i class="fa fa-map-marker"></i> <br />ESTADÍSTICA</a></li>
+                                            <li role="presentation"><a href="#appdesign" aria-controls="appdesign" role="tab" data-toggle="tab"><i class="fa fa-map-marker"></i> <br />CALIDAD</a></li>
+                                            <li role="presentation"><a href="#graphicdesign" aria-controls="graphicdesign" role="tab" data-toggle="tab"><i class="fa fa-map-marker"></i> <br />FINANZAS/CONTABILIDAD</a></li>
+                                            <li role="presentation"><a href="#gamedesign" aria-controls="gamedesign" role="tab" data-toggle="tab"><i class="fa fa-map-marker"></i> <br />GESTIÓN DE VENTAS</a></li>
                                         </ul>
 
                                         <!-- Tab panes -->
@@ -470,7 +470,7 @@
                                                         <img src="assets/images/992580.png" height="40" width="40" alt="" />
                                                     </div>
                                                     <div class="single_ab_text">
-                                                        <h3>TUTORES EXPERTOS EN EL AREA</h3>
+                                                        <h3>TUTORES EXPERTOS EN EL ÁREA</h3>
                                                         <p>Capacitadores con basta experiencia práctica en diferentes áreas, que han ejercido en grandes empresas del país y que continúan al tanto de tendencias del mercado nacional e internacional. </p>
                                                     </div>
                                                 </div>
@@ -582,7 +582,7 @@
                                                 </div>
                                                 </span><b>ESTADÍSTICA</b></h4>
                                                 <div class="single_othersservice_content">
-                                                    <p>Aprende a manejar datos numéricos para logres realizar procesos considerando variables aleatorias. Podrás visibilizar datos de forma práctica y tomar decisiones más acertadas.  </p>
+                                                    <p>Aprende a manejar datos numéricos para que logres realizar procesos considerando variables aleatorias. Podrás visibilizar datos de forma práctica y tomar decisiones más acertadas.  </p>
                                                 </div>
                                             </div>
                                         </div>
@@ -712,8 +712,8 @@
                             <div class="col-sm-2 col-xs-6"> 
                                 <a href=""><img src="assets/images/Pycca.jpg" alt="" /></a>
                             </div>
-                           <!-- <div class="col-sm-2 col-xs-6">
-                                <a href=""><img src="assets/images/clogo4.png" alt="" /></a>
+                            <div class="col-sm-2 col-xs-6">
+                                <a href=""><img src="assets/images/KevinR.jpg" alt="" /></a>
                             </div>
                            <!-- <div class="col-sm-2 col-xs-6"> 
                                 <a href=""><img src="assets/images/clogo5.png" alt="" /></a>
@@ -752,7 +752,7 @@
                                                             </div>
                                                             <div class="single_info_text">
                                                                 <h6>CORREO</h6>
-                                                                <p><h6>glen_robayo@hotmail.com - wramirezcoello@hotmail.com - ttdconocimiento@gmail.com</h6></p>
+                                                                <p><h6>glen_robayo@hotmail.com - ttdconocimiento@gmail.com</h6></p>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -763,7 +763,7 @@
                                                             </div>
                                                             <div class="single_info_text">
                                                                 <h6>LLAMADA</h6>
-                                                                <p><h5>0998465235 - 0930909043</h5></p>
+                                                                <p><h5>0930909043</h5></p>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -823,7 +823,7 @@
                                                 </div>-->
 
                                                 <div class="home_btn">
-                                                    <h3>DEJANOS UN MENSAJE</h3>
+                                                    <h3>DÉJANOS UN MENSAJE</h3>
                                                     <a href="https://share.hsforms.com/1t23jhALVQ_iI3U7D5IgMAQcoyj6" class="btn btn-primary">Enviar</a>
                                                 </div>
                                                 <!--</div>--> 
