--- a/index.html
+++ b/index.html
@@ -870,7 +870,7 @@
                                             <div class="single_widget wow fadeIn" data-wow-duration="800ms">
                                                
                                                 <p>TTDC</p>
-                                             <p>   Afianzamos nuestro compromiso de trabajar arduamente para brindar a los profesionales el más actualizado conocimiento, herramientas prácticas y el expertise de capacitadores de alto perfil con basta experiencia en el área de ejecución. </p>
+                                             <p>   Afianzamos nuestro compromiso de trabajar arduamente para brindar a los profesionales el más actualizado conocimiento, herramientas prácticas y el expertise de capacitadores de alto perfil con basta experiencia en el área.</p>
 
                                             </div>
                                         </div>
@@ -895,7 +895,7 @@
                                             <div class="single_widget wow fadeIn" data-wow-duration="800ms">
 
                                                 <div class="footer_title">
-                                                    <h4>PROXIMOS PROGRAMAS</h4>
+                                                    <h4>PRÓXIMOS PROGRAMAS</h4>
                                                     <div class="separator"></div>
                                                 </div>
                                                 <ul>
