--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                                             
                                             <h3><span style="color:rgb(253, 255, 253)">LLEVANDO TUS COMPETENCIAS A UN NUEVO NIVEL.</span></h3>
                                             <div class="home_btn">
-                                                <a href="https://share.hsforms.com/1-dgDGX4GSJCr58Rod7Ob5Acoyj6" class="btn btn-primary">Más información</a>
+                                                <a href="https://share.hsforms.com/1-dgDGX4GSJCr58Rod7Ob5Acoyj6" class="btn btn-primary">Inscríbete gratis</a>
                                             </div>
 
                                         </div>
@@ -421,7 +421,7 @@
                                         <a href="https://drive.google.com/drive/u/2/folders/1QoPtx7gqDppqNYp5mPkyFX_XB9jBCoEf" class="btn btn-primary">DESCARGA DE FOLLETO</a>
                                     </div>
                                     <div class="home_btn">
-                                        <a href="https://share.hsforms.com/1At83x4KlT7iTFJdLFsRCNAcoyj6" class="btn btn-primary">INSCRIPCIÓN</a>
+                                        <a href="https://share.hsforms.com/1At83x4KlT7iTFJdLFsRCNAcoyj6" class="btn btn-primary">INSCRIPCIÓN GRATIS</a>
                                     </div>
                                 </div>
                             </div>
