--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@
 
 
             <section id="testimonial" class="testimonial">
-               <div class="video_overlay">
+               <!--<div class="video_overlay">-->
                     <div class="container">
                         <div class="row">
                             <div class="main_testimonial sections text-center">
