--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                                         <div class="main_home wow fadeInUp" data-wow-duration="700ms">
                                             <i class="fa fa-star fa-2x fa.lg" style="color:rgb(255, 145, 0);"/></i>
                                             
-                                            <h3><span style="color:rgb(253, 255, 253)">LLEVANDO TUS COMPETENCIAS A UN NUEVO NIVEL.</span></h3>
+                                            <h3><span style="color:rgb(253, 255, 253)">LLEVANDO TUS COMPETENCIAS A UN NUEVO NIVEL</span></h3>
                                             <div class="home_btn">
                                                 <a href="https://share.hsforms.com/1-dgDGX4GSJCr58Rod7Ob5Acoyj6" class="btn btn-primary">Inscríbete gratis</a>
                                             </div>
@@ -471,7 +471,7 @@
                                                     </div>
                                                     <div class="single_ab_text">
                                                         <h3>TUTORES EXPERTOS EN EL ÁREA</h3>
-                                                        <p>Capacitadores con basta experiencia práctica en diferentes áreas, que han ejercido en grandes empresas del país y que continúan al tanto de tendencias del mercado nacional e internacional. </p>
+                                                        <p>Capacitadores con vasta experiencia práctica en diferentes áreas, que han ejercido en grandes empresas del país y que continúan al tanto de tendencias del mercado nacional e internacional. </p>
                                                     </div>
                                                 </div>
                                                 <div class="single_about">
@@ -582,7 +582,7 @@
                                                 </div>
                                                 </span><b>ESTADÍSTICA</b></h4>
                                                 <div class="single_othersservice_content">
-                                                    <p>Aprende a manejar datos numéricos para que logres realizar procesos considerando variables aleatorias. Podrás visibilizar datos de forma práctica y tomar decisiones más acertadas.  </p>
+                                                    <p>Aprende a manejar datos estadísticos para que logres analizar procesos con diferentes tipos de variables y te permita tomar decisiones más acertadas en tu trabajo o negocio.</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -870,7 +870,7 @@
                                             <div class="single_widget wow fadeIn" data-wow-duration="800ms">
                                                
                                                 <p>TTDC</p>
-                                             <p>   Afianzamos nuestro compromiso de trabajar arduamente para brindar a los profesionales el más actualizado conocimiento, herramientas prácticas y el expertise de capacitadores de alto perfil con basta experiencia en el área.</p>
+                                             <p>   Afianzamos nuestro compromiso de trabajar arduamente para brindar a los profesionales el más actualizado conocimiento, herramientas prácticas y el expertise de capacitadores de alto perfil con vasta experiencia en el área.</p>
 
                                             </div>
                                         </div>
