--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                                         <div class="main_home wow fadeInUp" data-wow-duration="700ms">
                                             <h1><span style="color:rgb(253, 255, 253)">TT</span><span style="color:rgb(255, 145, 0)">D</span><span style="color:red">C<span></span></h1>
                                             <div class="home_btn">
-                                                <a href="https://api.whatsapp.com/send?phone=0980909043&text=Hola, Nececito mas informacion!" class="btn btn-primary">Envíanos un mensaje de WhatsApp</a>
+                                                <a href="https://api.whatsapp.com/send?phone=+593 980909043&text=Hola, Nececito mas informacion!" class="btn btn-primary">Envíanos un mensaje de WhatsApp</a>
                                             </div>
                                             <h3><span style="color:rgb(253, 255, 253)">TRANSFORMANDO TUS DATOS EN CONOCIMIENTO</span></h3>
                                             <div class="home_btn">
@@ -144,7 +144,7 @@
                                         <div class="main_home wow fadeInUp" data-wow-duration="700ms">
                                             <i class="fa fa-star fa-2x fa.lg" style="color:rgb(255, 145, 0);"/></i>
                                             <div class="home_btn">
-                                                <a href="https://api.whatsapp.com/send?phone=0980909043&text=Hola, Nececito mas informacion!" class="btn btn-primary">Envíanos un mensaje de WhatsApp</a>
+                                                <a href="https://api.whatsapp.com/send?phone=+593 0980909043&text=Hola, Nececito mas informacion!" class="btn btn-primary">Envíanos un mensaje de WhatsApp</a>
                                             </div>
                                             <h3><span style="color:rgb(253, 255, 253)">LLEVANDO TUS COMPETENCIAS A UN NUEVO NIVEL</span></h3>
                                             <div class="home_btn">
@@ -157,7 +157,7 @@
                                         <div class="main_home wow fadeInUp" data-wow-duration="700ms">
                                             <i class="fa fa-star fa-2x fa.lg" style="color:rgb(255, 145, 0);"/></i>
                                             <div class="home_btn">
-                                                <a href="https://api.whatsapp.com/send?phone=0980909043&text=Hola, Nececito mas informacion!" class="btn btn-primary">Envíanos un mensaje de WhatsApp</a>
+                                                <a href="https://api.whatsapp.com/send?phone=+593 0980909043&text=Hola, Nececito mas informacion!" class="btn btn-primary">Envíanos un mensaje de WhatsApp</a>
                                             </div>
                                             <h3><span style="color:rgb(253, 255, 253)">GENERANDO NUEVAS OPORTUNIDADES COMERCIALES</span></h3>
                                             <div class="home_btn">
