--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                                                                     <h3>MARKETING DIGITAL - ABRIL/2022</h3>
                                                                     <div class="separator"></div>
                                                                 </div>
-                                                                <p><h6>La forma de hacer marketing ha cambiado y con ello se ha transformado la forma de implementar campañas que causen impacto en la era digital. 
+                                                                <palign="justify"><h6>La forma de hacer marketing ha cambiado y con ello se ha transformado la forma de implementar campañas que causen impacto en la era digital. 
                                                                         Domina el conocimiento y descubre todas las herramientas de Marketing Digital para llevar a cabo todas las estrategias de tu organización.</p></h6>
 
                                                                     </h6>
