--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                                                 </div>
                                                 <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree" aria-expanded="false">
                                                     <div class="panel-body">
-                                                    <p><h6>Toda aquella persona que quiera implementar estrategias de Marketing Digital en su empresa. </h6></p>
+                                                    <p><h6> •   Toda aquella persona que quiera implementar estrategias de Marketing Digital en su empresa. </h6></p>
 
                                                     <p><h6> •	Ayudantes, coordinadores, Asistentes de Marketing</h6></p>
                                                     <p><h6> •	Profesional encargado de la imagen corporativa de la empresa </h6></p>
@@ -385,8 +385,8 @@
                                                 </div>
                                                 <div id="collapsefour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree" aria-expanded="false">
                                                     <div class="panel-body">
-                                                        <p><h5>Son 8 horas de estudio divididas en 5 jornadas prácticas, en formato online (tiempo real).</h5></p>
-
+                                                        
+                                                        <p><h6>Son 8 horas de estudio divididas en 5 jornadas prácticas, en formato online (tiempo real).</h6></p>
                                                         <p><h6>•	Día 1 - lunes 4 abril - 19h30 a 21h00 </h6></p>
                                                         <p><h6>•	Día 3 - martes 5 abril - 19h30 a 21h00 </h6></p>
                                                         <p><h6>•	Día 3 - miércoles 6 abril - 19h30 a 21h00</h6></p>
