--- a/index.html
+++ b/index.html
@@ -201,11 +201,11 @@
                                                                     <h3>MARKETING DIGITAL - ABRIL/2022</h3>
                                                                     <div class="separator"></div>
                                                                 </div>
-                                                                <palign="justify"><h6>La forma de hacer marketing ha cambiado y con ello se ha transformado la forma de implementar campañas que causen impacto en la era digital. 
-                                                                        Domina el conocimiento y descubre todas las herramientas de Marketing Digital para llevar a cabo todas las estrategias de tu organización.</p></h6>
+                                                                <p align="center"><h6>La forma de hacer marketing ha cambiado y con ello se ha transformado la forma de implementar campañas que causen impacto en la era digital.</p></h6>
+                                                                       <p align="center"><h6>Domina el conocimiento y descubre todas las herramientas de Marketing Digital para llevar a cabo todas las estrategias de tu organización.</p></h6>
 
-                                                                    </h6>
-                                                                 </p>
+                                                                    <!-- </h6>-->
+                                                                  <!--</p>-->
 
                                                                 <a href="https://share.hsforms.com/1-dgDGX4GSJCr58Rod7Ob5Acoyj6" class="btn btn-primary">Más información</a>
                                                             </div>
