--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                                                 </div>
                                                 <div id="collapsefive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingfive" aria-expanded="false">
                                                     <div class="panel-body">
-                                                    <h3><b> $ 65 </b> </h3> <b>+ Iva (descuento por pronto pago).</b>
+                                                    <h3><b> $ 65 + Iva </b> </h3> <b>(Aplica descuento por pronto pago).</b>
                                                     </div>
                                                 </div>
                                             </div>
