--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
                                                 </div>
                                                 </span><b>FINANZAS</b></h4>
                                                 <div class="single_othersservice_content">
-                                                    <p>Aprende a controlar los recursos financieros de tu organización y/o proyecto, con cursos prácticos y ejecutables con herramientas de gestión actual. </p>
+                                                    <p><h4>Aprende a controlar los recursos financieros de tu organización y/o proyecto, con cursos prácticos y ejecutables con herramientas de gestión actual.</h4></p>
                                                 </div>
                                             </div>
                                         </div>
@@ -599,7 +599,7 @@
                                                 </div>
                                                 </span><b>ESTADÍSTICA</b></h4>
                                                 <div class="single_othersservice_content">
-                                                    <p>Aprende a manejar datos estadísticos para que logres analizar procesos con diferentes tipos de variables y te permita tomar decisiones más acertadas en tu trabajo o negocio.</p>
+                                                    <p><h4>Aprende a manejar datos estadísticos para que logres analizar procesos con diferentes tipos de variables y te permita tomar decisiones más acertadas en tu trabajo o negocio.</h4></p> 
                                                 </div>
                                             </div>
                                         </div>
@@ -610,7 +610,7 @@
                                                 </div>
                                                 </span><b>MARKETING</b></h4>
                                                 <div class="single_othersservice_content">
-                                                    <p>Descubre las diferentes estrategias, herramientas y metodología aplicables en esta era, para posicionar tu marca en el mercado y maximizar tus ventas. </p>
+                                                    <p><h4>Descubre las diferentes estrategias, herramientas y metodología aplicables en esta era, para posicionar tu marca en el mercado y maximizar tus ventas.</h4> </p>
                                                 </div>
                                             </div>
                                         </div>
@@ -623,7 +623,7 @@
                                                 </div>
                                                 </span><b>CONTABILIDAD</b></h4>
                                                 <div class="single_othersservice_content">
-                                                    <p>Logra sistematizar, analizar, interpretar y presentar datos contables, considerando información financiera verídica, para medir el patrimonio de tu organización. </p>
+                                                    <p><h4>Logra sistematizar, analizar, interpretar y presentar datos contables, considerando información financiera verídica, para medir el patrimonio de tu organización. </h4></p>
                                                 </div>
                                             </div>
                                         </div>
