--- a/index.html
+++ b/index.html
@@ -958,7 +958,7 @@
             </section>
 
 
-           <!--  <section class="footer">
+          <section class="footer">
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-12">
@@ -973,12 +973,12 @@
 
                                     <div class="col-sm-6 col-xs-12">
                                         <div class="flowus">
-                                            <a href=""><i class="fa fa-facebook"></i></a>
-                                            <a href=""><i class="fa fa-twitter"></i></a>
+                                            <a href="https://www.facebook.com/profile.php?id=100078435741263"><i class="fa fa-facebook"></i></a>
+                                          <!-- <a href=""><i class="fa fa-twitter"></i></a>
                                             <a href=""><i class="fa fa-google-plus"></i></a>
                                             <a href=""><i class="fa fa-instagram"></i></a>
                                             <a href=""><i class="fa fa-youtube"></i></a>
-                                            <a href=""><i class="fa fa-dribbble"></i></a>
+                                              <a href=""><i class="fa fa-dribbble"></i></a>-->
                                         </div>
                                     </div>
 
@@ -987,7 +987,7 @@
                         </div>
                     </div>
                 </div>
-            </section>-->
+            </section>
 
 
 
