--- a/index.html
+++ b/index.html
@@ -967,7 +967,7 @@
 
                                     <div class="col-sm-6 col-xs-12">
                                         <div class="copyright_text">
-                                            <p class=" wow fadeInRight" data-wow-duration="1s">Made with <i class="fa fa-heart"></i> by <a href="https://bootstrapthemes.co">Bootstrap Themes</a>2016. All Rights Reserved</p>
+                                            <p class=" wow fadeInRight" data-wow-duration="1s">Hecho con <i class="fa fa-heart"></i> por <a href="https://bootstrapthemes.co">AleXito</a>2022. All Rights Reserved</p>
                                         </div>
                                     </div>
 
